--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="foto.jpg" alt="foto minha" width="100">
     <h1>Guilherme Rodrigues de Medeiros</h1>
     <h2>Perfil</h2>
-    <p>Estudante de Ciência da Computação na Universidade Federal de Mato Grosso do Sul (UFMS), com experiência em clubes de robótica e matemática durante a formação no Colégio Militar de Campo Grande e Brasília. Possui certificação em inglês básico/intermediário (200h – Pan Americano) e interesse em aplicar conhecimentos de programação e lógica na prática. Proativo, com facilidade para trabalhos em equipe, iniciativa na resolução de problemas e foco em desafios que estimulem aprendizado e crescimento profissional.</p>
+    <p>Estudante de Ciência da Computação na Universidade Federal de Mato Grosso do Sul (UFMS) cominteresse em aplicar conhecimentos de programação e lógica na prática. Proativo, com facilidade para trabalhos em equipe, iniciativa na resolução de problemas e foco em desafios que estimulem aprendizado e crescimento profissional.</p>
     <h3>Principais Competências</h3>
     <ul>
         <li>Programador Python</li>
@@ -21,7 +21,16 @@
         <li>Programador Java </li>
     </ul>
     <h3>Formação Acadêmica</h3>
-    <p>Graduando em 2025 pela </p>
-
+    <p>Graduando em 2025 pela <a href="https://www.ufms.br/">UFMS </a> com previsão de conclusão em 2028 </p>
+    <h3>Experiência Profissional</h3>
+    <ol>
+        <li>Microsoft (2023-atual): estágio com desenvolvimento front-end em <strong>Java Script</strong> </li>
+        <li>Google(2021-2022): cargo temporário em <strong>análise de requisitos</strong>. </li>
+    </ol>
+    <h3>Contato</h3>
+    <img src="https://github.com/JaneEleuterio/ProgWeb/blob/main/email.jpg?raw=true" alt="icone 1" width="20">
+    <a href="mailto:medeirosgui950@gmail.com">medeirosgui950@gmail.com</a>
+    <br>
+    <p><img src="https://github.com/JaneEleuterio/ProgWeb/blob/main/telefone.jpg?raw=true" alt="icone 2" width="20"> (67) 99873-6113</p>
 </body>
 </html>
